@@ -21,10 +21,12 @@ import okhttp3.OkHttpClient;
 import okhttp3.Request;
 import okhttp3.RequestBody;
 import okhttp3.Response;
+import  java.util.List;
 
 public class HandlerBookTraining {
 
-    public List<BookTrainingResponse> getAllBookTraining() {
+        public static List<BookTrainingResponse> getAllBookTraining() {
+        Gson gson = new Gson();
         List<BookTrainingResponse> result = new ArrayList<>();
         try {
             OkHttpClient client = new OkHttpClient().newBuilder()
@@ -33,14 +35,14 @@ public class HandlerBookTraining {
             RequestBody body = RequestBody.create(mediaType, "");
             Request request = new Request.Builder()
                     .url("http://localhost:8080/api/book/training/findAll")
-                    .method("GET", body)
+                    .method("GET", null)
                     .addHeader("Cookie", "JSESSIONID=EE1637F3E67E007413996CEFA4CFDF31")
                     .build();
             Response response = client.newCall(request).execute();
             if (response.code() == 200) {
-                Log.d( "getAllBookTraining: %s",response.body().toString());
-                result = Arrays.asList(new Gson().fromJson(response.body().toString(), BookTrainingResponse[].class));
-
+                assert response.body() != null;
+                String res = response.body().string();
+                result = List.of(gson.fromJson(res, BookTrainingResponse[].class));
                 System.out.println(result.size());
             }
         } catch (Exception ex) {
@@ -48,6 +50,7 @@ public class HandlerBookTraining {
         } // gọi vào hàm này ở app tôi phát.. gọi hàm này nhá là sao
         return result;
     }
+
 
 
 }
